[workspace]

members = [ 
  "compiler/*", 
  "liblumen_*", 
  "lumen", 
#  "native_implemented/*", 
  "runtimes/*",
]

default-members = [ 
  "lumen" 
]

exclude = [
  "liblumen_alloc",
  "liblumen_alloc_macros",
  "native_implemented/*",
  "compiler/codegen_llvm",
  "runtimes/core",
  "runtimes/full",
  "runtimes/minimal",
  "examples"
]

[profile.release]
# Experimentally determined to give the smallest size out of all `opt-level`s (0-3,'s','z') and
# `lto`s (true and false) for `examples/spawn-chain/pkg/spawn_chaing_bg.wasm`
opt-level = 2
lto = false
