[workspace]

members = [
  "compiler/*",
  "firefly",
  "library/*",
  "native_implemented/*",
  "runtimes/*",
]

default-members = [
  "firefly"
]

exclude = [
  "liblumen_alloc",
  "liblumen_alloc_macros",
  "native_implemented/*",
  "runtimes/core",
  "runtimes/full",
  "runtimes/minimal",
  "examples",
  "tools"
]

[profile.release]
# Experimentally determined to give the smallest size out of all `opt-level`s (0-3,'s','z') and
# `lto`s (true and false) for `examples/spawn-chain/pkg/spawn_chaing_bg.wasm`
opt-level = 2
lto = false
