[package]
name = "firefly"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

build = "build.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = "2.34"
env_logger.workspace = true
human-panic = "1.0"
firefly_util = { path = "../compiler/util" }
firefly_compiler = { path = "../compiler/driver" }
firefly_session = { path = "../compiler/session" }
log.workspace = true

[build-dependencies]
firefly_crt = { path = "../runtimes/crt" }
firefly_emulator = { path = "../runtimes/emulator" }
