[package]
name = "lumen_interpreter"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "run_file"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.11"
clap = "2.33.0"
cranelift-entity = "0.56.0"
lazy_static = "1.3.0"

# eirproject/eir crates
libeir_diagnostics = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }
libeir_intern = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }
libeir_ir = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }
libeir_passes = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }
libeir_syntax_erl = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }
libeir_util_parse = { git = "https://github.com/eirproject/eir.git", branch = "lumen" }

# workspace crates
liblumen_alloc = { path = "../liblumen_alloc" }
liblumen_core = { path = "../liblumen_core" }
native_implemented = { path = "../native_implemented_functions/macro" }

[dependencies.hashbrown]
version = "0.7"
features = ["nightly"]

[dependencies.liblumen_otp]
path = "../native_implemented_functions/otp"
features = ["runtime_full"]

[dependencies.lumen_rt_full]
path = "../runtimes/full"
features = ["time_web_sys"]
