[package]
name = "liblumen_alloc"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
publish = false
edition = "2021"

[features]
# Turns on allocation instrumentation
instrument = []

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
cfg-if = "1.0"
dashmap = "5.2"
heapless = "0.7"
lazy_static = "1.4"
liblumen_arena = { path = "../library/arena"}
liblumen_alloc_macros = { path = "../liblumen_alloc_macros" }
liblumen_term = { path = "../compiler/term" }
log = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
once_cell = "1.10"
static_assertions = "1.1"
termcolor = "1.1"
thiserror = "1.0"

[dependencies.hashbrown]
version = "0.12"
features = ["nightly"]

[dependencies.intrusive-collections]
version = "0.9"
features = ["nightly"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
backtrace = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test = "0.3.29"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.79"
features = ["nightly"]

# for debugging
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.56"
features = ['console']

[dev-dependencies]
pretty_assertions = "1.2"
