[package]
name = "liblumen_codegen"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"
publish = false

build = "build.rs"

[dependencies]
llvm-sys = "90"
libc = "0.2"
failure = "0.1"
tempfile = "3.0"
libeir_diagnostics = { git = "https://github.com/eirproject/eir.git" }
libeir_ir = { git = "https://github.com/eirproject/eir.git" }

[build-dependencies]
cc = "1.0.25"
