[package]
name = "liblumen_compiler"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.11"
thiserror = "1.0.1"
walkdir = "2.2"
libeir_diagnostics = { git = "https://github.com/eirproject/eir.git" }
libeir_intern = { git = "https://github.com/eirproject/eir.git" }
libeir_ir = { git = "https://github.com/eirproject/eir.git" }
libeir_passes = { git = "https://github.com/eirproject/eir.git" }
libeir_syntax_erl = { git = "https://github.com/eirproject/eir.git" }
