[package]
name = "liblumen_core_macros"
version = "0.1.0"
authors = ["Lumen Developers"]
edition = "2018"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
proc-macro2 = "^1.0"
quote = "^1.0"

[dependencies.syn]
version = "^1.0"
features = ["full", "printing", "extra-traits"]
