[package]
name = "liblumen_otp"
version = "0.1.0"
authors = ["Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"
description = "The standard library for lumen.  The modules that are included with Erlang: `erlang` and `map`."

[dependencies]
anyhow = "1.0"
lazy_static = "1.2"
liblumen_alloc = { path = "../liblumen_alloc" }
liblumen_core = { path = "../liblumen_core" }
lumen_runtime = { path = "../lumen_runtime" }
native_implemented_function = { path = "../native_implemented_functions/macro" }
num-bigint = "0.2"
num-traits = "0.2"
radix_fmt = "1.0.0"
thiserror = "1.0"

[dependencies.hashbrown]
version = "0.7"
features = ["nightly"]

[target.'cfg(unix)'.dependencies]
proptest = "0.9.3"

[target.'cfg(windows)'.dependencies]
proptest = "0.9.3"
