[package]
name = "liblumen_util"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
cfg-if = "1.0"
thiserror = "1.0"
libc = "0.2"
glob = "0.3"
atty = "0.2"
libeir_diagnostics = { git = "https://github.com/eirproject/eir" }
