[package]
name = "lumen"
version = "0.1.0"
authors = ["Lumen Developers"]
homepage = "https://github.com/lumen/lumen"
repository = "https://github.com/lumen/lumen"
license = "Apache-2.0"
readme = "README.md"
publish = false
edition = "2018"

build = "build.rs"

[dependencies]
clap = "2.33.0"
human-panic = "1.0"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
liblumen_compiler = { path = "../liblumen_compiler" }
liblumen_util = { path = "../liblumen_util" }
liblumen_session = { path = "../liblumen_session" }

[build-dependencies]
liblumen_llvm = { path = "../liblumen_llvm" }
liblumen_term = { path = "../liblumen_term" }
liblumen_crt = { path = "../liblumen_crt" }
lumen_rt_minimal = { path = "../runtimes/minimal" }
