[package]
name = "lumen"
version = "0.1.0"
authors = ["Lumen Developers"]
homepage = "https://github.com/lumen/lumen"
repository = "https://github.com/lumen/lumen"
license = "Apache-2.0"
readme = "README.md"
publish = false
edition = "2018"

build = "build.rs"

[dependencies]
clap = "2.33.0"
human-panic = "1.0"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
liblumen_util = { path = "../liblumen_util" }
liblumen_compiler = { path = "../compiler/driver" }
liblumen_session = { path = "../compiler/session" }

[build-dependencies]
liblumen_crt = { path = "../runtimes/crt" }
lumen_rt_minimal = { path = "../runtimes/minimal" }
