[package]
name = "lumen_runtime"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>", "Luke Imhoff <Kronic.Deth@gmail.com>"]
publish = false
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bus = "2.0"
cfg-if = "0.1.7"
clap = "2.32.0"
colored = "1.6"
# immutable HashMap to back maps.
im = "12.3"
lazy_static = "1.2"
libc = "0.2"
liblumen_arena = { path = "../liblumen_arena" }
liblumen_alloc = { path = "../liblumen_alloc" }
liblumen_core = { path = "../liblumen_core" }
log = "0.4"
num-bigint = "0.2.2"
num-traits = "0.2.6"

[dependencies.hashbrown]
version = "0.5"
features = ["nightly"]

[dependencies.intrusive-collections]
version = "0.7"
features = ["nightly"]

[dependencies.parking_lot_core]
git = "https://github.com/KronicDeth/parking_lot.git"
branch = "wasm32-time_web_sys"
features = ["nightly"]

[dev-dependencies]
radix_fmt = "1.0.0"

[target.'cfg(unix)'.dependencies]
internment = "0.3.6"
proptest = "0.9.3"
rand = "0.6"
signal-hook = "0.1"
xorshift = "0.1"

[target.'cfg(windows)'.dependencies]
internment = "0.3.6"
proptest = "0.9.3"
rand = "0.6"
signal-hook = "0.1"
xorshift = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.38"
rand = { version = "0.6", features = ["wasm-bindgen"] }
xorshift = "0.1"

# for debugging
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.20"
features = ['console']

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.38"
wasm-bindgen-test = "0.2.38"

[features]
time_web_sys = ["parking_lot_core/time_web_sys"]
