[package]
name = "lumen_web"
version = "0.1.0"
authors = ["Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"
publish = false
description = "Lumen bindings for Web APIs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblumen_alloc = { path = "../liblumen_alloc" }
lumen_runtime = { path = "../lumen_runtime" }

[dependencies.web-sys]
version = "0.3.25"
features = ["Document", "Element", "Node", "Text", "Window"]

