[package]
name = "lumen_web"
version = "0.1.0"
authors = ["Luke Imhoff <Kronic.Deth@gmail.com>"]
edition = "2018"
publish = false
description = "Lumen bindings for Web APIs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time_web_sys"]
time_web_sys = ["lumen_runtime/time_web_sys"]

[dependencies]
js-sys = "0.3.25"
liblumen_alloc = { path = "../liblumen_alloc" }
liblumen_core = { path = "../liblumen_core" }
lumen_runtime = { path = "../lumen_runtime" }

[dependencies.wasm-bindgen]
version = "0.2.48"
features = ["nightly"]

[dependencies.web-sys]
version = "0.3.25"
features = ["Document", "DomException", "Element", "Event", "EventListener", "EventTarget", "HtmlCollection",
            "HtmlBodyElement", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "HtmlTableElement", "Node", "Text",
            "Window"]

[dev-dependencies]
futures = "0.1.28"
wasm-bindgen-futures = "0.3.26"
wasm-bindgen-test = "0.2"
