[package]
name = "liblumen_binary"
version = "0.1.0"
authors = ["Hans Elias B. Josephsen <me@hansihe.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-bigint = "0.4.2"
