[package]
name = "liblumen_codegen"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
cc = "1.0"
fxhash = "0.2"
libc = "0.2"
log = "0.4"
num-bigint = "0.4"
tempfile = "3.3"
thiserror = "1.0"

liblumen_alloc = { path = "../../liblumen_alloc" }
liblumen_core = { path = "../../liblumen_core" }
liblumen_compiler_macros = { path = "../macros" }
liblumen_diagnostics = { path = "../diagnostics" }
liblumen_llvm = { path = "../llvm" }
liblumen_intern = { path = "../intern" }
liblumen_mlir = { path = "../mlir" }
liblumen_number = { path = "../number" }
liblumen_pass = { path = "../pass" }
liblumen_session = { path = "../session" }
liblumen_syntax_core = { path = "../syntax_core" }
liblumen_target = { path = "../target" }
liblumen_term = { path = "../term" }
liblumen_util = { path = "../util" }

[build-dependencies]
liblumen_llvm = { path = "../llvm" }
