[package]
name = "firefly_codegen"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
cc = "1.0"
fxhash = "0.2"
libc = "0.2"
log = "0.4"
num-bigint = "0.4"
tempfile = "3.3"
thiserror = "1.0"

firefly_binary = { path = "../../library/binary" }
firefly_compiler_macros = { path = "../macros" }
firefly_diagnostics = { path = "../diagnostics" }
firefly_llvm = { path = "../llvm" }
firefly_intern = { path = "../intern" }
firefly_mlir = { path = "../mlir" }
firefly_number = { path = "../../library/number" }
firefly_pass = { path = "../pass" }
firefly_rt = { path = "../../library/rt" }
firefly_session = { path = "../session" }
firefly_syntax_ssa = { path = "../syntax_ssa" }
firefly_syntax_base = { path = "../syntax_base" }
firefly_target = { path = "../target" }
firefly_util = { path = "../util" }

[build-dependencies]
firefly_llvm = { path = "../llvm" }
