[package]
name = "liblumen_diagnostics"
version = "0.1.0"
authors = ["Paul Schoenfelder <paulschoenfelder@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
unicode-width = "0.1"
codespan = "0.11"
codespan-reporting = "0.11"
dashmap = "4.0"
liblumen_diagnostics_macros = { path = "../diagnostics_macros" }

[dev-dependencies]
pretty_assertions = "1.0"
