[package]
name = "firefly_diagnostics"
description = "Diagnostics reporting infrastructure for the Firefly compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
codespan = "0.11"
codespan-reporting = "0.11"
firefly_diagnostics_macros = { path = "../diagnostics_macros" }
unicode-width = "0.1"
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
